--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'United States -- History -- French and Indian War, 1754-1763 -- Fiction'
+- GITenberg
 title: Montlivet
 url: http://www.gutenberg.org/ebooks/16733
